--- a/functions/package.json
+++ b/functions/package.json
@@ -11,17 +11,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^17.0.0",
     "firebase-admin": "^11.0.0",
     "firebase-functions": "^3.20.0",
     "mailersend": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.5.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.0",
     "@types/jest": "^27.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0"
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.32.0",
+    "jest": "^27.0.0",
+    "typescript": "^4.5.0"
   },
   "engines": {
     "node": "14"
