--- a/functions/package.json
+++ b/functions/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "firebase-functions-app",
-  "version": "1.0.0",
-  "description": "Firebase Cloud Functions app using TypeScript and modular SDK",
-  "main": "lib/index.js",
+  "name": "functions",
   "scripts": {
+    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "serve": "firebase emulators:start",
+    "build:watch": "tsc --watch",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "lint": "eslint .",
-    "test": "jest"
-  },
-  "dependencies": {
-    "dotenv": "^17.0.0",
-    "firebase-admin": "^11.0.0",
-    "firebase-functions": "^3.20.0",
-    "mailersend": "^2.0.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.0",
-    "typescript": "^4.5.0"
+    "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "14"
+    "node": "22"
+  },
+  "main": "lib/index.js",
+  "dependencies": {
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.7.3"
   },
   "private": true
 }
