--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,7 +8,10 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "types": [
+      "jest"
+    ]
   },
   "compileOnSave": true,
   "include": [
