--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^17.0.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "mailersend": "^2.6.0"
+    "mailersend": "^2.6.0",
+    "nodemailer": "^7.0.4"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
