--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -22,10 +22,10 @@ jobs:
           cd functions
           npm ci
 
-      - name: Build functions
-        run: |
-          cd functions
-          npm run build
+      # - name: Build functions
+      #   run: |
+      #     cd functions
+      #     npm run build
 
       # - name: Deploy to Firebase
       #   uses: FirebaseExtended/action-hosting-deploy@v0
